MP-2008-11-12-0: Enhancem.:  added new test for qrsh -w v Fix for IZ 256
                 Review:     CR

RD-2008-11-12-1: Bugfix:     fixed NFS timing issues during installation
                 Review:     CR

RD-2008-11-12-0: Bugfix:     fixed auto installation broken due to inst_sge fix
                 Review:     JG

EB-2008-11-11-0: Bugfix:     - fixed bugs in jsv_script test 
                 Review:     MD 

CR-2008-11-10-1: Bugfix:     Fixed qmod_general test
                 Review:     JG

MD-2008-11-10-0: Bugfix:     - shadow_migrate test failed on shadow host, where
                               the nfsv4 shared volume is local (changed 
                               get_fstype to fs_config_get_filesystem_type)
                 Review:     JG
  
EB-2008-11-10-0: Enhancem.:  - added new test for JSV script
                             - added new test for JSV parsing code in master
                 Review:     MD

CR-2008-11-10-0: Bugfix:     - set_passwd() did not re-ask for password if
                               the connection could not be established
                             - The unix connection is always checked now
                             - for windows hosts now local and domain connection
                               is checked
                 Review:     HP

JG-2008-11-10-0: Bugfix:     copy_certs test failed in clusters without csp and
                             without windows hosts
                 Review:     CR

EB-2008-11-07-0: Bugfix:     - duration of job start and shutdown behaviour
                               influence enforce_limits test. To improve
                               this I replaced shutdown_system_daemon by
                               soft_execd_shutdown call to get u state during
                               shutdown earlier. 
                 Review:     CR

MG-2008-11-07-0: Enhancem.:  - SI usecase can now run in run level week - REAL CHANGES
                 Review:     RH
