@@ -1,3 +1,6 @@
+CR-2008-11-12-0: Bugfix:     fixed system_tests/commlib/issues test
+                 Review:     AA
+
 MP-2008-11-12-0: Enhancem.:  added new test for qrsh -w v Fix for IZ 256
                  Review:     CR
 
